@@ -1,5 +1,5 @@
 AUX configure.py.patch 1582 RMD160 f32260fa941070356a21fb98c749436c89f9ea71 SHA1 7dc0aa5d30ad15c43e4e303d1f26735e710a4d26 SHA256 dbd98df4abb88791f45cd5a896ab2d0fadd6f77935d37d318f8ef05f984b313d
 DIST PyQt-x11-gpl-4.5.5-snapshot-20090806.tar.gz 6844102 RMD160 a5094e68e837b37a7d76336458940fc3d34b416a SHA1 ff5d4f3e48cb4252b09664d240083d0e973cc481 SHA256 61d6a7d0f281967b44ff4544f1a106f82255559ccd8f9eb2868d150f7665f0af
-EBUILD PyQt4-4.5.5_pre20090806.ebuild 3889 RMD160 f9dbe4c94d1c244682be1c65ec0001fcd8cabb6b SHA1 e3b9a6195f06a19037c4e36906928a5dc6bf8209 SHA256 112e3859702b910179556e29d11de88322bb589ece08750b5350a8dca2ec97e4
-MISC ChangeLog 8989 RMD160 bef8565936381ac0afe17af234d55bed2488a7d5 SHA1 2023c05d8e6e003c4edc3494b87dbc8ef925dfbb SHA256 2f0b8d317ea2a6b65d68c93c1124517e3a49654d0d32c18ab43507a23841964b
+EBUILD PyQt4-4.5.5_pre20090806.ebuild 3958 RMD160 b9f3af0ab1c785abfe724a32fed10bd961573f2e SHA1 ff72b3936c1d179cdcea08c84b98cd68fde25e89 SHA256 35d8c9d7b3d798f55a84280cc7102490cc5fd5c6b3f663d40b53ef368a167ca4
+MISC ChangeLog 9145 RMD160 68d4ecc5fde989f83b69d8583aad4af8e3476bde SHA1 8ad67637f095b7f1bc98b5567e1e3f566d616e23 SHA256 d95f4d973d120909ba9123f0dde604d34136cb7470e5baae47cab833882607b0
 MISC metadata.xml 642 RMD160 0a9271db6e18561fdd834d054186fbb0445fc19b SHA1 27ab2a924dff45be4cef4efaa01a67bbe3bff2c7 SHA256 002a5a6bb12da2ef8b9e7b22541922ff4e92d7c1ae1d82c29bbd2c6c7faeb91c
